<resources>
    <!--Intro-->
    <string name="intro_app_name">Cjh - Developpeur full Stack</string>
    <string name="intro_hello">Bonjour</string>
    <string name="intro_name">Je m\'appelle Jong Hoa</string>
    <string name="intro_text">Passionné par la réalisation et le développement de projets web, je suis en 3e année de Bachelor Dev et Data à l\'Efrei.</string>
    <!--Contact-->
    <string name="contact_form">Contactez Moi</string>
    <string name="contact_form_name">Nom</string>
    <string name="contact_form_email">Email</string>
    <string name="contact_form_subject">Sujet</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Envoyer</string>
    <string name="contact_form_post_message">Veuillez patientiez...</string>
    <string name="contact_posted">Envoyé</string>
    <!--Profil-->
    <string name="profil_title">Profile</string>
    <string name="profil_last_name">Nom :</string>
    <string name="profil_first_name">Prénom :</string>
    <string name="profil_place">Lieu :</string>
    <string name="profil_languages">Langues parlés :</string>
    <string name="profil_nationality">Nationalité :</string>
    <string name="profil_center_of_interest">Centre d\'intérêt :</string>
    <!--My Infos-->
    <string name="profil_my_last_name">Chong</string>
    <string name="profil_my_first_name">Jong Hoa</string>
    <string name="profil_my_place">94- Villejuif</string>
    <string name="profil_my_languages">Français, Anglais, Chinois</string>
    <string name="profil_my_nationality">Française</string>
    <string name="profil_my_center_of_interest">Voyages, jeux vidéo</string>
</resources>
