<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blankFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <!-- TODO: Update Contact fragment layout -->

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="366dp"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotobold"
                android:text="@string/contact_form"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="name"
                android:background="@color/textColor"
                android:hint="@string/contact_form_name"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="email"
                android:background="@color/textColor"
                android:inputType="textEmailAddress"
                android:hint="@string/contact_form_email"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="subject"
                android:background="@color/textColor"
                android:hint="@string/contact_form_subject"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="180dp"
                android:autofillHints="message"
                android:hint="@string/contact_form_message"
                android:background="@color/textColor"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/teal_200"
                android:paddingLeft="15dp"
                android:paddingTop="1dp"
                android:paddingRight="15dp"
                android:paddingBottom="1dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>